# RusticBlogger

./: .gitignore  README.md  blog_posts_json.json  license.txt
blog_code/templates/: error.html.tera  index.html.tera
blog_restapi/: Cargo.toml
blog_restapi/src/: lib.rs  main.rs
blog_restapi/templates/: index.html  post.html.tera
