[package]
name = "blog_restapi"
version = "0.1.0"
edition = "2021"
authors = ["Vaughn Poulo <vpoulo@pdx.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tera = "1.11.0"
rocket = "=0.5.0-rc.4"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = ["handlebars", "tera"]